--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,8 @@ project(ScubaDemo)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(ScubaDemo main.cpp
-        diveObj/DiveEntry.cpp
-        diveObj/DiveEntry.h
-        diveObj/DiveLog.cpp
-        diveObj/DiveLog.h)
+add_executable(ScubaDemo src/main.cpp
+        src/diveObj/DiveEntry.cpp
+        src/diveObj/DiveEntry.h
+        src/diveObj/DiveLog.cpp
+        src/diveObj/DiveLog.h)
